svg ler eklendi

--- a/index.html
+++ b/index.html
@@ -16,7 +16,31 @@
             rel="stylesheet">
 </head>
 <body>
-
+    <svg>
+        <use href="./images/icons.svg#icon-Ellipse-1"></use>
+    </svg>
+    
+<svg>
+    <use href="./images/icons.svg#icon-Ellipse-6"></use>
+</svg>
+<svg>
+    <use href="./images/icons.svg#icon-Icon-1"></use>
+</svg>
+<svg>
+    <use href="./images/icons.svg#icon-Icon-3"></use>
+</svg>
+<svg>
+    <use href="./images/icons.svg#icon-Ellipse-5"></use>
+</svg>
+<svg>
+    <use href="./images/icons.svg#icon-Ellipse"></use>
+</svg>
+<svg>
+    <use href="./images/icons.svg#icon-Icon-2"></use>
+</svg>
+<svg>
+    <use href="./images/icons.svg#icon-Icon-4"></use>
+</svg>
    <header class="header-section-class">
 <div class="container container-header">
    
