--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <div class="image-container">
               <img src="./images/portfolio-1.jpg" alt="Portfolio-1" width="360" height="300">
 
-                  <p class="text-in-image text-hover text-settings">
+                  <p class="text-in-image text-animation text-settings">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App 
                 </p>
