--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <div class="image-container">
               <img src="./images/portfolio-1.jpg" alt="Portfolio-1" width="360" height="300">
 
-                  <p class="text-in-image  text-settings">
+                  <p class="text-in-image text-animation text-settings">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App 
                 </p>
@@ -350,7 +350,7 @@
         <div class="image-container">
               <img src="./images/portfolio-2.jpg" alt="Portfolio-2" width="360" height="300">
 
-                  <p class="text-in-image  text-settings">
+                  <p class="text-in-image text-animation text-settings">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App 
                 </p>
@@ -370,7 +370,7 @@
         <div class="image-container">
               <img src="./images/portfolio-3.jpg" alt="Portfolio-3" width="360" height="300">
 
-                  <p class="text-in-image  text-settings">
+                  <p class="text-in-image text-animation text-settings">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App 
                 </p>
@@ -390,7 +390,7 @@
         <div class="image-container">
             <img src="./images/portfolio-4.jpg" alt="portfolio-4" width="360" height="300">
 
-                <p class="text-in-image  text-settings">
+                <p class="text-in-image text-animation text-settings">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App 
                 </p>
@@ -410,7 +410,7 @@
         <div class="image-container">
             <img src="./images/portfolio-5.jpg" alt="portfolio-5" width="360" height="300">
 
-                <p class="text-in-image  text-settings">
+                <p class="text-in-image text-animation text-settings">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App 
                 </p>
@@ -433,7 +433,7 @@
 
             <img src="./images/portfolio-6.jpg" alt="portfolio-6" width="360" height="300">
 
-                <p class="text-in-image  text-settings">
+                <p class="text-in-image text-animation text-settings">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App 
                 </p>
