--- a/index.html
+++ b/index.html
@@ -330,8 +330,7 @@
         <div class="image-container">
               <img src="./images/portfolio-1.jpg" alt="Portfolio-1" width="360" height="300">
 
-                  <p class="text-in-image">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                  <p class="text-in-image"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App 
                 </p>
 
@@ -350,8 +349,7 @@
         <div class="image-container">
               <img src="./images/portfolio-2.jpg" alt="Portfolio-2" width="360" height="300">
 
-                  <p class="text-in-image">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                  <p class="text-in-image">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App 
                 </p>
         </div>
@@ -370,8 +368,7 @@
         <div class="image-container">
               <img src="./images/portfolio-3.jpg" alt="Portfolio-3" width="360" height="300">
 
-                  <p class="text-in-image">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                  <p class="text-in-image"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App 
                 </p>
 
@@ -390,8 +387,7 @@
         <div class="image-container">
             <img src="./images/portfolio-4.jpg" alt="portfolio-4" width="360" height="300">
 
-                <p class="text-in-image">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                <p class="text-in-image">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App 
                 </p>
 
@@ -410,8 +406,7 @@
         <div class="image-container">
             <img src="./images/portfolio-5.jpg" alt="portfolio-5" width="360" height="300">
 
-                <p class="text-in-image">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                <p class="text-in-image"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App 
                 </p>
 
@@ -433,8 +428,7 @@
 
             <img src="./images/portfolio-6.jpg" alt="portfolio-6" width="360" height="300">
 
-                <p class="text-in-image">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                <p class="text-in-image"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
                     Cloud Storage App 
                 </p>
         </div>
