--- a/index.html
+++ b/index.html
@@ -468,10 +468,10 @@
 
        <ul class="footer-icons">
           <li class="footer-icons-settings">
-            
+
              <a href="" class="footer-social-media-icon-list" >
-                 <svg class="footer-social-media-icons-settings">
-                    <use href="./images/icons.svg#icon-Ellipse" width="24" height="24"></use>
+                 <svg class="footer-social-media-icons-settings" width="24" height="24">
+                    <use href="./images/icons.svg#icon-Ellipse" ></use>
                 </svg>
 
             </a>
@@ -479,24 +479,24 @@
 
           <li class="footer-icons-settings">
              <a href="" class="footer-social-media-icon-list" >
-                 <svg class="footer-social-media-icons-settings">
-                    <use href="./images/icons.svg#icon-Ellipse-5" width="24" height="24"></use>
+                 <svg class="footer-social-media-icons-settings" width="24" height="24">
+                    <use href="./images/icons.svg#icon-Ellipse-5" ></use>
                 </svg>
             </a>
           </li>
 
           <li class="footer-icons-settings">
              <a href="" class="footer-social-media-icon-list" >
-                 <svg class="footer-social-media-icons-settings">
-                    <use href="./images/icons.svg#icon-Ellipse-1" width="24" height="24"></use>
+                 <svg class="footer-social-media-icons-settings" width="24" height="24">
+                    <use href="./images/icons.svg#icon-Ellipse-1"></use>
                 </svg>
             </a>
           </li>
 
           <li class="footer-icons-settings">
              <a href="" class="footer-social-media-icon-list" >
-                 <svg class="footer-social-media-icons-settings">
-                    <use href="./images/icons.svg#icon-Ellipse-6" width="24" height="24"></use>
+                 <svg class="footer-social-media-icons-settings" width="24" height="24">
+                    <use href="./images/icons.svg#icon-Ellipse-6" ></use>
                 </svg>
             </a>
           </li>
