hover deneme yeni

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
        <ul class="footer-icons">
           <li class="footer-icons-settings">
 
-             <a href="" class="footer-social-media-icon-list" >
+             <a href="" class="footer-social-media-icon-list footer-connect-icons footer-icons-elements" >
                  <svg class="footer-social-media-icons-settings" width="24" height="24">
                     <use href="./images/icons.svg#icon-Ellipse" ></use>
                 </svg>
@@ -478,7 +478,7 @@
           </li>
 
           <li class="footer-icons-settings">
-             <a href="" class="footer-social-media-icon-list" >
+             <a href="" class="footer-social-media-icon-list footer-connect-icons footer-icons-elements" >
                  <svg class="footer-social-media-icons-settings" width="24" height="24">
                     <use href="./images/icons.svg#icon-Ellipse-5" ></use>
                 </svg>
@@ -486,7 +486,7 @@
           </li>
 
           <li class="footer-icons-settings">
-             <a href="" class="footer-social-media-icon-list" >
+             <a href="" class="footer-social-media-icon-list footer-connect-icons footer-icons-elements" >
                  <svg class="footer-social-media-icons-settings" width="24" height="24">
                     <use href="./images/icons.svg#icon-Ellipse-1"></use>
                 </svg>
@@ -494,7 +494,7 @@
           </li>
 
           <li class="footer-icons-settings">
-             <a href="" class="footer-social-media-icon-list" >
+             <a href="" class="footer-social-media-icon-list footer-connect-icons footer-icons-elements" >
                  <svg class="footer-social-media-icons-settings" width="24" height="24">
                     <use href="./images/icons.svg#icon-Ellipse-6" ></use>
                 </svg>
