--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
             <ul class="nav-connections">
                 <li>
-                    <a href="./index.html" id="header-studio-text"class="header-list-first">studio</a>
+                    <a href="./index.html" id="header-studio-text" class="header-list-first">studio</a>
                 </li>
                 <li>
                     <a href="" class="header-list-first">portfolio</a>
@@ -452,9 +452,9 @@
 
    <footer class="footer" >
 
-<div class="footer-container-for-all">
+<div class="footer-container-for-all container">
 
-<div class="container footer-main-container ">
+<div class="footer-main-container ">
     <a href="./index.html" class="footer-logo">web<span class="studio-second">Studio</span></a>
 
     <P class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
